--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -117,7 +117,7 @@ jobs:
             -V '${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}' \
             -A '${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}' \
             -o ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso \
-            ${{ vars.COLLECTOR }}-*.* sonarqube-bamboo-plugin.jar 
+            ${{ vars.COLLECTOR }}-*.* sonarqube-bamboo-plugin.jar README.md
 
       - name: Implant MD5 sum into iso
         run: implantisomd5 ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso
