--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -93,11 +93,14 @@ jobs:
       contents: write
       pull-requests: read
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
       - name: Install mkisofs
         run: |
           sudo apt-get update -y
           sudo apt-get install -y mkisofs isomd5sum wget
-
+        
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
