Remove deleted jar from makeiso

--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -129,7 +129,7 @@ jobs:
             -V '${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}' \
             -A '${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}' \
             -o ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso \
-            ${{ vars.COLLECTOR }}-*.* sonarqube-bamboo-plugin.jar README.md binaries
+            ${{ vars.COLLECTOR }}-*.* README.md binaries
 
       - name: Implant MD5 sum into iso
         run: implantisomd5 ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso
