--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   workflow_dispatch:
-      
+
 jobs:
   Date:
     runs-on: ubuntu-latest
@@ -100,7 +100,7 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y mkisofs isomd5sum wget
-        
+
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
@@ -109,11 +109,6 @@ jobs:
 
       - name: Show Artifacts
         run: ls -alh ISO/${{ vars.COLLECTOR }}-*.*
-
-      # - name: Download Bamboo Plugin
-      #   run: |
-      #     wget -nv -O sonarqube-bamboo-plugin.jar \
-      #       https://marketplace.atlassian.com/download/apps/1212756/
 
       - name: Download SonarScannerCLI Binaries
         run: |
@@ -145,16 +140,16 @@ jobs:
           cat ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso.sha
 
       - name: Show ISO & Hash
-        run: ls -alh *.iso*
+        run: ls -Alh *.iso*
 
-      - name: Upload iso artifact
+      - name: Upload ISO
         uses: actions/upload-artifact@v4
         with:
           name: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso
           path: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso
           if-no-files-found: error
 
-      - name: Upload iso sha artifact
+      - name: Upload ISO SHA
         uses: actions/upload-artifact@v4
         with:
           name: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.iso.sha
@@ -176,7 +171,7 @@ jobs:
           merge-multiple: true
 
       - name: Show Artifacts
-        run: ls -alh ${{ vars.COLLECTOR }}-*.*
+        run: ls -Alh ${{ vars.COLLECTOR }}-*.*
 
       - name: Set up git
         run: |
@@ -209,9 +204,6 @@ jobs:
       contents: write
       pull-requests: read
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
