--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -112,9 +112,9 @@ jobs:
 
       - name: Generate Artifact Hash File
         run: |
-          sha256sum -b ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}* >>\
-            ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
-          cat ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+          sha256sum -b ISO/${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}* >>\
+            ISO/${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+          cat ISO/${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
 
       - name: Upload Artifact Hash File
         uses: actions/upload-artifact@v4
