--- a/.github/workflows/collect.yml
+++ b/.github/workflows/collect.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Skopeo
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y skopeo
+          sudo apt-get install -y skopeo pigz
 
       - name: DSO Login
         run: |
@@ -49,7 +49,7 @@ jobs:
 
       - name: TARchive Skopeo Output
         run: |
-          tar -cvz --remove-files \
+          tar -cv -Ipigz --remove-files \
             -f ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.tgz ${{ vars.COLLECTOR }}
           ls -Alh ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.tgz
 
@@ -110,18 +110,6 @@ jobs:
       - name: Show Artifacts
         run: ls -Alh ISO/${{ vars.COLLECTOR }}-*.*
 
-      - name: Generate Artifact Hash File
-        run: |
-          sha256sum -b ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}* >>\
-            ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
-          cat ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
-
-      - name: Upload Artifact Hash File
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
-          path: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
-
       - name: Download SonarScannerCLI Binaries
         run: |
           echo -e "\nDownloading binaries\n"
@@ -133,6 +121,23 @@ jobs:
 
       - name: Copy Markdowns to ISO
         run: cp -v *.md ISO/
+
+      - name: Show Artifacts
+        run: ls -Alh ISO/${{ vars.COLLECTOR }}-*.*
+
+      - name: Generate Artifact Hash File
+        run: |
+          cd ISO
+          sha256sum -b * >>\
+            ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+          cat ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+
+      - name: Upload Artifact Hash File
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+          path: ISO/${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
+
 
       - name: Make ISO
         run: |
