--- a/.github/workflows/collect-branch.yml
+++ b/.github/workflows/collect-branch.yml
@@ -128,7 +128,7 @@ jobs:
       - name: Generate Artifact Hash File
         run: |
           cd ISO
-          sha256sum -b * >>\
+          sha256sum -b ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}* >>\
             ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
           cat ${{ vars.COLLECTOR }}-${{ needs.Date.outputs.Date }}.sha
 
